resized images and corrected bugs
Corrigidos bugs relacionados a leitura e escrita dos arquivos JSON, além de adicionar uma função de downscale das fotos para otimizar o treinamento do modelo

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -2,36 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gabri\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from trim_dataset import TrimDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dataset = TrimDataset('trims_dataset')\n",
     "print('Dataset carregado com sucesso')\n",
-    "base_dataset.dataset_augmentation()"
+    "base_dataset.save_images('downscaled_dataset')\n",
+    "base_dataset.save_annotations(path='downscaled_dataset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "reduced_dataset = TrimDataset('downscaled_dataset')\n",
+    "reduced_dataset.dataset_augmentation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
